# graphulator

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  QUICK_START.md  README.md  pyproject.toml
.github/workflows/: build-apps.yml  bump-version.yml
building/: README.md  build.bat  build.sh  build_graphulator.bat  build_graphulator.sh  build_paragraphulator.bat  build_paragraphulator.sh  graphulator-mac.spec  graphulator-win.spec  graphulator.spec  graphulator_launcher.py  paragraphulator-mac.spec  paragraphulator-win.spec  paragraphulator.spec  paragraphulator_launcher.py
examples/: __init__.py
examples/graphs/: DTWPA_1x.graph  DTWPA_4x.pgraph  DTWPA_8.graph  FC_AB.graph  __init__.py  circulator.graph  circulator_loopy.graph  delta_amplifier_loopy.graph
examples/notebooks/: EXAMPLES_autograph.ipynb  README.md  autograph_dev_ptI.ipynb  autograph_dev_ptII.ipynb  graphulator_tutorial.ipynb  temp_graph_traversal.ipynb  temp_test2.ipynb  temp_test3.ipynb
examples/pgraphs/: 5MODE_CHEBY.pgraph  5MODE_CHEBY_TEMP.pgraph  AMP_BA.pgraph  AMP_BA_Cdingle.pgraph  DELTA_AMP_WIDE.pgraph  DTWFC.pgraph  DTWPA_2_WIDE.pgraph  DTWPA_8MODE.pgraph  DTWPA_MINIMAL.pgraph  DTWPA_MINIMAL2.pgraph  DTWPA_MINIMAL_3.pgraph  DTWPA_WEIRDO.pgraph  DTWPA_WEIRDO2.pgraph  Delta_Amp.pgraph  Delta_Amp2.pgraph  FIG15.pgraph  FIG20.pgraph  FPJA_PRA.pgraph  TEUFELATOR.pgraph  TRIANGLE_DINGLEBERRY.pgraph  WIDE2_AB_AMP.pgraph  WIDE_DELTA.pgraph  path_inline_zeros.pgraph  test.pgraph  tmp.pgraph  tmp2.pgraph
misc/: graphulator.icns  paragraphulator.icns  paragraphulator_start.sh
misc/PGRAPH_TESTS/: 3MODE_AMP_CHAIN.pgraph  3MODE_WIDE_JPA.pgraph  4MODE_CHAIN.pgraph  4MODE_CHAIN_TEST.pgraph  5MODE_CHAIN_BYPASS_TEST.pgraph  CIRC_FULL_SCATT.pgraph  CIRC_FULL_SCATT_ABC.pgraph  CIRC_FULL_SCATT_CBA.pgraph  CIRC_NOSCATT.pgraph  CIRC_PARTIAL_SCATT.pgraph  DELTAAMP_FULL_SCATT_ABC.pgraph  DELTAAMP_FULL_SCATT_CBA.pgraph  DELTA_ABC_MATCHED.pgraph  DTWPA_10.pgraph  (+12 more)
scripts/: bump_version.py
tests/: __init__.py  test_interaction_state.py  test_katex_templates.py  test_settings_manager.py
(+54 files in other folders)
